ui fix, add components fixed chose box,
+ fix youtube nav bar text float when lang is zh
+ add fixed in data that prep to sand to backend
+ fix ig and fb short bar ui too high whan is fixed

--- a/src/components/Phone/YouTube/YouTube.css
+++ b/src/components/Phone/YouTube/YouTube.css
@@ -231,6 +231,7 @@
 
 .yt-nav-bar-button {
   min-width: 50px !important;
+  padding: 0 !important;
 }
 
 .yt-nav-bar .Mui-selected svg {
